# core-ml

./: .gitignore  Evaluate.hs  Main.hs  Renaming.hs  Syntax.hs  Utilities.hs  core-ml.cabal  equational.cabal
