Cabal-Version:      >= 1.2
Build-Type:         Simple
Name:               equational
Version:            0.1
Maintainer:         Max Bolingbroke <batterseapower@hotmail.com>
Homepage:           http://www.github.com/batterseapower/equational
License:            BSD3
License-File:       LICENSE
Author:             Max Bolingbroke
Synopsis:           Equational reasoning formatter in Haskell
Category:           Language

Executable dual-calculus
    Main-Is:        Main.hs
    Build-Depends:  base >= 4 && < 5, containers >= 0.3 && < 0.4,
                    prettyclass >= 1 && < 1.2, uniqueid >= 0.1.1 && < 0.2

    Ghc-Options:    -fwarn-unused-binds -fwarn-unused-imports -fwarn-unused-matches
